# PolymorphismTests

./: .gitignore  CMakeLists.txt  main_dynamic_polymorphic.cpp  main_static_polyformic.cpp  test.cpp
include/: staticpoly  utils.hpp
